--- a/src/RookieShop.Domain/RookieShop.Domain.csproj
+++ b/src/RookieShop.Domain/RookieShop.Domain.csproj
@@ -12,6 +12,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Pgvector" />
+		<PackageReference Include="Pgvector.EntityFrameworkCore" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Update="SonarAnalyzer.CSharp">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
