--- a/src/RookieShop.AppHost/RookieShop.AppHost.csproj
+++ b/src/RookieShop.AppHost/RookieShop.AppHost.csproj
@@ -32,8 +32,10 @@
 		<ItemGroup>
 			<PackageJsons Include="..\..\ui\*\package.json" />
 		</ItemGroup>
-		<Message Importance="Normal" Text="Installing node packages for %(PackageJsons.RelativeDir)" Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
-		<Exec Command="bun install" WorkingDirectory="%(PackageJsons.RootDir)%(PackageJsons.Directory)" Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
+		<Message Importance="Normal" Text="Installing node packages for %(PackageJsons.RelativeDir)"
+		         Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
+		<Exec Command="bun install" WorkingDirectory="%(PackageJsons.RootDir)%(PackageJsons.Directory)"
+		      Condition="!Exists('%(PackageJsons.RootDir)%(PackageJsons.Directory)/node_modules')" />
 	</Target>
 
 </Project>
