--- a/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
+++ b/src/RookieShop.Infrastructure/RookieShop.Infrastructure.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<PropertyGroup>
+		<NoWarn>$(NoWarn);SKEXP0001;SKEXP0010;SKEXP0070</NoWarn>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
@@ -26,6 +30,8 @@
 	<ItemGroup>
 		<PackageReference Include="Marten" />
 		<PackageReference Include="Scrutor" />
+		<PackageReference Include="Aspire.Azure.AI.OpenAI" />
+		<PackageReference Include="Microsoft.SemanticKernel" />
 		<PackageReference Include="Quartz.Extensions.Hosting" />
 		<PackageReference Include="Aspire.Azure.Storage.Blobs" />
 	</ItemGroup>
