--- a/src/RookieShop.StoreFront/RookieShop.Storefront.csproj
+++ b/src/RookieShop.StoreFront/RookieShop.Storefront.csproj
@@ -28,12 +28,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.TypeScript.MSBuild">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="Microsoft.TypeScript.MSBuild" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" />
+		<PackageReference Include="Microsoft.Web.LibraryManager.Build" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -57,6 +55,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="wwwroot\lib\dist\hyperscript.org\" />
 	</ItemGroup>
 
 	<Target Name="Tailwind" BeforeTargets="Build">
