--- a/src/RookieShop.BackOffice/package.json
+++ b/src/RookieShop.BackOffice/package.json
@@ -17,10 +17,7 @@
     "lint": "next lint",
     "ca": "dotnet dev-certs https --format pem -ep ./certificates/localhost.pem",
     "format:write": "bun prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "bun prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "cypress:open": "cypress open"
+    "format:check": "bun prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "browserslist": {
     "production": [
@@ -109,7 +106,6 @@
     "@happy-dom/global-registrator": "^14.12.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@tailwindcss/typography": "^0.5.13",
-    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20",
@@ -117,11 +113,8 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "cross-env": "^7.0.3",
-    "cypress": "^13.10.0",
     "eslint": "^9",
     "eslint-config-next": "14.2.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "3.3.0",
     "tailwindcss": "^3.4.1",
