--- a/src/RookieShop.AppHost/manifest.json
+++ b/src/RookieShop.AppHost/manifest.json
@@ -118,11 +118,7 @@
       "type": "container.v0",
       "connectionString": "{redis.bindings.tcp.host}:{redis.bindings.tcp.port}",
       "image": "docker.io/library/redis:7.2",
-      "args": [
-        "--save",
-        "60",
-        "1"
-      ],
+      "args": ["--save", "60", "1"],
       "bindMounts": [
         {
           "source": "../../mnt/redis",
