--- a/src/RookieShop.BackOffice/package.json
+++ b/src/RookieShop.BackOffice/package.json
@@ -117,6 +117,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "prettier": "3.3.0",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
