--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@playwright/test": "^1.44.1",
+    "@types/node": "^20.14.2",
     "@vuepress/bundler-vite": "2.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "husky": "^9.0.11",
     "vue": "^3.4.27",
     "vuepress": "2.0.0-rc.12",
