--- a/src/RookieShop.BackOffice/components/ckeditor5/package.json
+++ b/src/RookieShop.BackOffice/components/ckeditor5/package.json
@@ -3,21 +3,21 @@
   "author": "CKSource",
   "description": "A custom CKEditor 5 build made by the CKEditor 5 online builder.",
   "version": "0.0.1",
-  "license": "SEE LICENSE IN LICENSE.md",
   "private": true,
   "main": "./build/ckeditor.js",
   "types": "./build/ckeditor.d.ts",
   "dependencies": {
     "@ckeditor/ckeditor5-alignment": "41.4.2",
-    "@ckeditor/ckeditor5-autoformat": "41.4.2",
     "@ckeditor/ckeditor5-basic-styles": "41.4.2",
     "@ckeditor/ckeditor5-editor-classic": "41.4.2",
     "@ckeditor/ckeditor5-essentials": "41.4.2",
     "@ckeditor/ckeditor5-find-and-replace": "41.4.2",
     "@ckeditor/ckeditor5-font": "41.4.2",
     "@ckeditor/ckeditor5-heading": "41.4.2",
+    "@ckeditor/ckeditor5-highlight": "41.4.2",
+    "@ckeditor/ckeditor5-indent": "41.4.2",
+    "@ckeditor/ckeditor5-link": "41.4.2",
     "@ckeditor/ckeditor5-paragraph": "41.4.2",
-    "@ckeditor/ckeditor5-typing": "41.4.2",
     "@ckeditor/ckeditor5-undo": "41.4.2"
   },
   "devDependencies": {
