--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,7 +33,8 @@
         "bradlc.vscode-tailwindcss",
         "dsznajder.es7-react-js-snippets",
         "redhat.vscode-yaml",
-        "GitHub.vscode-github-actions"
+        "GitHub.vscode-github-actions",
+        "CucumberOpen.cucumber-official"
       ]
     }
   }
