--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "vuepress": "2.0.0-rc.12",
     "vuepress-plugin-search-pro": "^2.0.0-rc.47",
     "vuepress-theme-hope": "2.0.0-rc.47"
+  },
+  "dependencies": {
+    "@cucumber/cucumber": "^10.8.0"
   }
 }
