--- a/package.json
+++ b/package.json
@@ -17,25 +17,17 @@
     "docs:build": "vuepress-vite build docs",
     "docs:clean-dev": "vuepress-vite dev docs --clean-cache",
     "docs:dev": "vuepress-vite dev docs",
-    "docs:update-package": "npx vp-update",
-    "test": "cucumber-js e2e"
+    "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@playwright/test": "^1.44.1",
     "@types/node": "^20.14.2",
     "@vuepress/bundler-vite": "2.0.0-rc.12",
-    "dotenv": "^16.4.5",
     "husky": "^9.0.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
     "vue": "^3.4.27",
     "vuepress": "2.0.0-rc.12",
     "vuepress-plugin-search-pro": "^2.0.0-rc.47",
     "vuepress-theme-hope": "2.0.0-rc.47"
-  },
-  "dependencies": {
-    "@cucumber/cucumber": "^10.8.0"
   }
 }
