--- a/src/RookieShop.BackOffice/package.json
+++ b/src/RookieShop.BackOffice/package.json
@@ -95,7 +95,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-resizable-panels": "^2.0.18",
-    "recharts": "^2.12.7",
+    "recharts": "^2.13.0-alpha.4",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -120,7 +120,6 @@
     "postcss": "^8",
     "prettier": "3.3.0",
     "prettier-plugin-tailwindcss": "^0.6.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
