--- a/src/RookieShop.StoreFront/RookieShop.Storefront.csproj
+++ b/src/RookieShop.StoreFront/RookieShop.Storefront.csproj
@@ -46,7 +46,7 @@
 
 	<ItemGroup>
 		<UpToDateCheckBuilt Include="wwwroot/css/site.css" Set="Css" />
-		<UpToDateCheckBuilt Include="postcss.config.js" Set="Css" />
+		<UpToDateCheckBuilt Include="postcss.config.mjs" Set="Css" />
 		<UpToDateCheckBuilt Include="tailwind.config.js" Set="Css" />
 	</ItemGroup>
 
